--- a/package.json
+++ b/package.json
@@ -10,37 +10,38 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "recharts": "^2.8.0",
-    "pdf-lib": "^1.17.1",
-    "pdf2pic": "^2.1.4",
-    "tesseract.js": "^5.0.0",
-    "multer": "^1.4.5-lts.1",
-    "@types/multer": "^1.4.8",
-    "formidable": "^3.5.1",
-    "@types/formidable": "^3.4.5",
     "axios": "^1.6.0",
-    "lucide-react": "^0.292.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
+    "formidable": "^3.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "lucide-react": "^0.292.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "^14.0.0",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.1.1",
+    "pdf2pic": "^2.1.4",
+    "postcss": "^8.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
-    "jspdf": "^2.5.2",
-    "html2canvas": "^1.4.1"
+    "recharts": "^2.8.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.0",
+    "tesseract.js": "^5.0.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0",
-    "@tailwindcss/typography": "^0.5.10"
+    "eslint-config-next": "^14.0.0"
   }
 }
